Clarify Shadowsocks compatibility in about dialog

--- a/src/server_manager/ui_components/outline-about-dialog.html
+++ b/src/server_manager/ui_components/outline-about-dialog.html
@@ -64,7 +64,7 @@
       </div>
       <p id='version'>Version [[outlineVersion]]</p>
       <p>Outline is an open source project created by <a href="https://jigsaw.google.com/">Jigsaw</a> to provide a safer way for news organizations and journalists to access the internet.  Learn more about Outline on <a href="https://s3.amazonaws.com/outline-vpn/index.html">our website</a>.</p>
-      <p>Outline is still an early stage project.  You can contribute to the code on <a href="https://github.com/jigsaw-Code/?q=outline">GitHub</a>, and follow us on <a href="https://www.reddit.com/r/outlinevpn/">Reddit</a> and <a href="https://medium.com/jigsaw">Medium</a> to hear when we expand to more platforms and add new features.</p>
+      <p>Outline is powered by <a href="https://shadowsocks.org">Shadowsocks</a> and is still an early stage project.  You can contribute to the code on <a href="https://github.com/jigsaw-Code/?q=outline">GitHub</a>, and follow us on <a href="https://www.reddit.com/r/outlinevpn/">Reddit</a> and <a href="https://medium.com/jigsaw">Medium</a> to hear when we expand to more platforms and add new features.</p>
       <p>
         <a href="https://jigsaw.google.com/">
           <img src="images/jigsaw-logo.svg">
