--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -135,7 +135,7 @@
       </div>
       <paper-button on-tap="connectToDigitalOceanTapped" class="primary">Connect to DigitalOcean</paper-button>
       <p style="text-align: center;">
-        <span class="dimmed">This will open on your browser for authentication</span>
+        <span class="dimmed">This will open in your browser for authentication</span>
       </p>
     </div>  <!-- end of #digitalOcean -->
 
