Implement DO OAuth UI

--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -33,7 +33,6 @@
       .card {
         padding: 24px 0;
         margin: 24px;
-        border-radius: 3px;
         text-align: left;
         color: rgba(0,0,0,0.87);
         font-weight: normal;
@@ -54,7 +53,7 @@
         color: var(--do-blue);
       }
       .card#manualServer paper-button {
-        color: #FFF;
+        color: #000;
         background-color: var(--manual-server-green);
       }
       .card#manualServer .difficultyLevel {
@@ -125,9 +124,6 @@
         color: rgba(255, 255, 255, 0.54);
       }
     </style>
-    <div class='walkthrough'>
-      <h3>You need a server to set up Outline.  If you don't have a server, we recommend creating an account with DigitalOcean to secure one.</h3>
-    </div>
 
     <div id='digitalOcean' class='card'>
       <div class="cardHeader">
