--- a/src/server_manager/ui_components/outline-intro-step.html
+++ b/src/server_manager/ui_components/outline-intro-step.html
@@ -31,7 +31,7 @@
         cursor: pointer;
       }
       .card {
-        padding: 24px 0;
+        padding: 12px 0 24px 0;
         margin: 24px;
         text-align: left;
         color: rgba(0,0,0,0.87);
@@ -70,9 +70,9 @@
         padding: 0 24px;
       }
       .card .difficultyLevel {
-        font-weight: 400;
+        font-weight: 500;
         letter-spacing: .05em;
-        font-size: 12px;
+        font-size: 10px;
         color: rgba(255, 255, 255, 0.54);
       }
       .card .cardLeftColumn {
